Bumped supported Java version to 21 and gradle to 8.7