@@ -2,6 +2,12 @@ plugins {
   id 'java'
 }
 
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
+  }
+}
+
 group = 'io.event-driven'
 version = '0.0.1-SNAPSHOT'
 
@@ -34,16 +40,6 @@ tasks.named('test') {
   useJUnitPlatform {
     excludeTags 'Exercise'
   }
-}
-
-tasks.withType(JavaCompile) {
-  options.compilerArgs += "--enable-preview"
-}
-tasks.withType(Test) {
-  jvmArgs += "--enable-preview"
-}
-tasks.withType(JavaExec) {
-  jvmArgs += "--enable-preview"
 }
 
 test {
